api docs updated
